# brainrot-sniper-utility

./: CMakeLists.txt  README.md  main.cpp
brainrot-sniper-utility/: main.py
brainrot-sniper-utility/src/: __init__.py  finder.py  sniper.py
brainrot-sniper-utility/tests/: test_sniper.py
include/: roblox_scanner.h  script_sniper.h
src/: roblox_scanner.cpp  script_sniper.cpp
tests/: test_scanner.cpp
